assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Lato:wght@700&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    margin: auto;
    font-family: Lato, sans-serif;
    color: #53423C;
    background-color: white;
}

main {
    height: 100%;
    margin-bottom: 90px;
}

h1 {
    font-family: Dancing Script, sans-serif;
    font-size: 3rem;
    text-align: center;
}

h2 {
    font-family: Dancing Script, sans-serif;
    font-size: 1.5rem;
    text-align: center;
}

h3 {
    margin-top: 20px;
    margin-bottom: 10px;
    font-family: Dancing Script, sans-serif;
    font-size: 2.5rem;
    text-align: center;
}

h4 {
    font-family: Dancing Script;
    font-size: 1.5rem;
    padding-top: 15px;
}

#h3-thank-you {
    padding-top: 80px;
}

#h3-contact {
    font-size: 2.5rem;
}

/* Navigation menu */
nav {
    width: 100%;
    height: 70px;
    background-color: #EADCCF;
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    top: 0;
}

.nav-list li {
    list-style: none;
    display: inline-block;
    margin: 1rem;
}

.nav-list li:hover {
    transform: scale(1.2);
}

.nav-list li a {
    font-size: 1.2rem;
    text-decoration: none;
    color: #53423C;
}

.nav-list li a:hover {
    color: white;
}

.active {
    border-bottom: #53423C 2px solid;
}

/* Background image */
.bg-img {
    height: 100%;
    width: 100%;
    background-image: url('../images/waves.jpg');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

/*Logo container under nav bar */
.logo-container {
    background-color: rgb(255, 255, 255, 0.7);
    height: 100px;
    width: 100%;
    position: absolute;
    top: 70px;
    padding-top: 5px;
}

/* Footer */
footer {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 70px;
    background-color: #EADCCF;
    position: fixed;
    bottom: 0;
}

.social-media li {
    list-style: none;
    display: inline-block;
    margin: 2rem;
}

.social-media li:hover {
    transform: scale(1.2);
}

.social-media li a {
    color: #53423C;
    font-size: 1.5rem;
    text-decoration: none;
}

.social-media li a:hover {
    color: white;
}

/* Text container */
.container {
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

/* Text box  */
.text-box {
    width: 550px;
    min-height: 400px;
    margin-top: 250px;
    margin-left: 20px;
    margin-right: 20px;
    background-color: rgb(83, 66, 60, 0.9);
    text-align: center;
    color: white;
    border-radius: 5px;
}

.text-box>p {
    font-size: 1.2rem;
    font-style: italic;
    padding-right: 20px;
    padding-left: 20px;
}

#small-island {
    padding-top: 30px;
    padding-left: 20px;
    padding-right: 20px;
}

/* Contact form */
.contact-form {
    width: 300px;
    min-height: 550px;
    margin-top: 250px;
    background-color: rgb(83, 66, 60, 0.9);
    text-align: center;
    color: white;
    border-radius: 5px;
}

label {
    color: white;
}

.text-input {
    background: rgb(255, 255, 255);
    color: black;
    width: 260px;
    height: 30px;
    margin: 5px 0 20px 0;
}

.question-box {
    background: rgb(255, 255, 255);
    width: 260px;
    height: 200px;
}

.send-button {
    margin-top: 20px;
    padding: 10px 20px 10px 20px;
    border-radius: 4px;
    text-align: center;
    font-size: 1rem;
    font-weight: bold;
    background-color: rgb(255, 255, 255);
    border: #53423C 2px solid;
    color: #53423C;
    cursor: pointer;
}

.send-button:hover {
    background-color: #53423C;
    color: white;
    border: white 2px solid;
}

/*Top 3 beaches list */
.text-box-beach {
    width: 650px;
    min-height: 500px;
    margin-top: 250px;
    margin-left: 20px;
    margin-right: 20px;
    background-color: rgb(83, 66, 60, 0.9);
    text-align: center;
    color: white;
    border-radius: 5px;
    padding-bottom: 10px;
}

.text-box-beach li {
    font-style: italic;
    padding-right: 20px;
    padding-left: 20px;
}

ul {
    list-style: none;
}

.list {
    margin-top: 20px;
}

/*Top 3 beaches image */
.img-map {
    padding-right: 20px;
    width: 650px;
    min-height: 500px;
    margin-top: 250px;
    margin-left: 20px;
    margin-right: 20px;
    background: url('../images/map.jpg') no-repeat;
    background-size: contain;
    border-radius: 5px;
}

/* Media queries */
/*Media queries for medium to small screen size from 1400px width and below */
@media screen and (max-width: 1400px) {
    .img-map {
        margin-top: 20px;
    }
}

/*Media queries for medium screen size from 500px width and below */
@media screen and (max-width: 500px) {
    .text-box {
        height: 350px;
    }

    .text-box p {
        font-size: 1.1rem;
    }

    h3 {
        font-size: 2rem;
        margin-top: 10px;
    }
}

/*Media queries for medium to small screen size from 440px width and below */
@media screen and (max-width: 440px) {
    .text-box {
        height: 370px;
    }
}

/*Media queries for small screen size from 390px width and below */
@media screen and (max-width: 390px) {
    .text-box {
        height: 390px;
    }

    .text-box p {
        font-size: 1rem;
    }

    h3 {
        font-size: 1.5rem;
    }
}

/*Media queries for small screen size from 850px height and below */
@media screen and (max-height: 850px) {
    .contact-form {
        height: 400px;
    }

    .question-box {
        height: 125px;
    }

    .text-input {
        height: 25px;
    }

    #h3-contact {
        font-size: 2rem;
    }

    .send-button {
        margin-top: 5px;
        padding: 5px 15px 5px 15px;
        font-size: 0.9rem;
    }
}

